# Shadow_Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  vcpkg.json
assets/models/: teapot.fbx
assets/shaders/: ColorFS.glsl  main_vertex.glsl
src/: main.cpp
src/core/: input.cpp  input.h  window.cpp  window.h
src/editor/: gui_layer.cpp  gui_layer.h
src/functions/: Mesh.h  Model.h  camera.h  shader.h
src/renderer/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
src/scene/: light_params.h  primitives.h  transform.cpp  transform.h
src/shaders/: MainFS.glsl  MainVS.glsl
src/utils/: functions.h
